--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
     <title>CountDown</title>
 </head>
 <body>
+
+    <div class="cursor"></div>
     
     <section class="coming-soon">
-            <h2>Coming soon :)</h2>
+            <h2 class="title">Coming soon :)</h2>
             <div class="countdown">
-                <div class="container-day">
-                    <h3 class="day">Time</h3>
+                <div class="container-day container">
+                    <h3 class="day"></h3>
                     <h3>Day</h3>
                 </div>
 
-                <div class="container-hour">
-                    <h3 class="hour">Time</h3>
+                <div class="container-hour container">
+                    <h3 class="hour"></h3>
                     <h3>Hour</h3>
                 </div>
 
-                <div class="container-minute">
-                    <h3 class="minute">Time</h3>
+                <div class="container-minute container">
+                    <h3 class="minute"></h3>
                     <h3>Minute</h3>
                 </div>
 
-                <div class="container-second">
-                    <h3 class="second">Time</h3>
+                <div class="container-second container">
+                    <h3 class="second"></h3>
                     <h3>Second</h3>
                 </div>
             </div>
